Updating CSS to hide line breaks form HTML to fix spacing for posts from Instagram

--- a/src/containers/News/index.css
+++ b/src/containers/News/index.css
@@ -168,7 +168,14 @@
         float: top;
         vertical-align: top;
     }
+
+    br + p {
+        margin-top: 0;
+    }
     
+    br {
+        display: none;
+    }
     .postTitle {
         width: 100%;
         font-size: 1.5em;
